buildscript {
    ext{
        junitVersion = '4.12'
    }
    repositories{
        jcenter()
    }
}

allprojects{
    apply plugin: 'idea'
    apply plugin: 'eclipse'

    version = '1.2'
}

subprojects{
    apply plugin: 'java'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    idea {
        module{
            downloadJavadoc = true
            downloadSources = true
            jdkName = '1.8'
        }
    }

    repositories {
        jcenter()
        mavenLocal()
    }

    dependencies {
        testCompile "junit:junit:${junitVersion}"
    }
}

task wrapper(type: Wrapper) {
    gradleVersion = '2.3'
}